--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <link href="https://fonts.loli.net/css?family=Quicksand:400" rel="stylesheet">
   <link charset="UTF-8" href="shared/sp/css/common.css" rel="stylesheet">
   <link charset="utf-8" href="css/mikutap.css" rel="stylesheet">
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/pixi.js/3.0.11/pixi.min.js" type="text/javascript"></script>
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/gsap/1.19.1/TweenMax.min.js" type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/jquery/2.2.4/jquery.min.js"
+    type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/pixi.js/3.0.11/pixi.min.js"
+    type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/gsap/1.19.1/TweenMax.min.js"
+    type="text/javascript"></script>
   <script charset="UTF-8" src="shared/js/common-2.min.js" type="text/javascript"></script>
   <script charset="utf-8" src="js/mikutap.min.js" type="text/javascript"></script>
 </head>
@@ -33,12 +36,14 @@
     <div class="ok">
       <p class="attention">※请打开声音并享受。</p>
     </div>
-     <div class="ok">
-     <p class="tit"><strong>注意！搬运内容，原页面(Origin Site): <a href="https://aidn.jp/mikutap">https://aidn.jp/mikutap</a></strong></p>
-    </div>
+    <!-- <div class="ok">
+      <p class="tit"><strong>注意！搬运内容，原页面(Origin Site): <a
+            href="https://aidn.jp/mikutap">https://aidn.jp/mikutap</a></strong></p>
+    </div> -->
   </div>
   <div id="scene_loading">
-    <hr size="1" color="#fff"> </div>
+    <hr size="1" color="#fff">
+  </div>
   <div id="scene_main">
     <div class="set">
       <p class="attention">点击 &amp; 拖动或者按任意键!</p>
@@ -49,8 +54,11 @@
   <div id="about">
     <div id="about_in">
       <p class="close"><span id="bt_close">×</span></p>
-      <p class="con"> 声音来源 <a href="https://ec.crypton.co.jp/pages/prod/vocaloid/mikuv4x" target="_blank">Hatsune Miku</a> </p>
-      <p class="con"> 作者 <a href="https://aidn.jp" target="_blank">daniwell</a> (<a href="https://twitter.com/daniwell_aidn" target="_blank">twitter</a>) </p>
+      <p class="con"> 声音来源 <a href="https://ec.crypton.co.jp/pages/prod/vocaloid/mikuv4x" target="_blank">Hatsune
+          Miku</a> </p>
+      <p class="con"> 作者 <a href="https://aidn.jp" target="_blank">daniwell</a> (<a
+          href="https://twitter.com/daniwell_aidn" target="_blank">twitter</a>) </p>
+      <p class="link">原页面<a href="https://aidn.jp/mikutap" target="_blank">(Origin Site)</a></p>
       <p class="link"> 灵感来源 <a href="http://patatap.com/" target="_blank">Patatap</a><br>(令人赞叹的网页!)</p>
     </div>
   </div>
